fixed the z-index for fixed checkout items. Fixed the maximum width for order cancellation confirmation

--- a/src/entities/user/ui/navAdmin/nav.module.scss
+++ b/src/entities/user/ui/navAdmin/nav.module.scss
@@ -60,6 +60,7 @@
         .burger{
             display: block;
             stroke: var(--black);
+            cursor: pointer;
             z-index: 99;
         }
     }
