--- a/src/pages/purchase/step2/purchase.module.scss
+++ b/src/pages/purchase/step2/purchase.module.scss
@@ -38,12 +38,15 @@
             .content{
                 width: 100%;
                 gap: 30px;
+                position: relative;
+                z-index: 1;
             }
 
             .sidebar{
                 position: fixed;
                 bottom: 0;
                 left: 0;
+                z-index: 9;
                 width: 100%;
             }
         }
